--- a/ProjektZPR/startmenu.ui
+++ b/ProjektZPR/startmenu.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>306</width>
+    <width>299</width>
     <height>299</height>
    </rect>
   </property>
@@ -44,7 +44,7 @@
       <item>
        <widget class="QPushButton" name="choose">
         <property name="text">
-         <string>Wybierz</string>
+         <string>Rozpocznij</string>
         </property>
        </widget>
       </item>
@@ -59,10 +59,28 @@
     </item>
    </layout>
   </widget>
+  <widget class="QPushButton" name="continueButton">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>270</y>
+     <width>101</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Kontynuuj</string>
+   </property>
+  </widget>
   <zorder>layoutWidget</zorder>
   <zorder>label</zorder>
+  <zorder>continueButton</zorder>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
  <connections/>
+ <slots>
+  <signal>chooseContinue(std::string)</signal>
+  <slot>on_continueButton_clicked()</slot>
+ </slots>
 </ui>
