--- a/ProjektZPR/projektzpr.ui
+++ b/ProjektZPR/projektzpr.ui
@@ -412,6 +412,7 @@
     </property>
     <addaction name="actionStart"/>
     <addaction name="actionQuit"/>
+    <addaction name="actionSchedule"/>
    </widget>
    <widget class="QMenu" name="menuCreate">
     <property name="title">
@@ -441,6 +442,11 @@
   <action name="actionStart">
    <property name="text">
     <string>Start</string>
+   </property>
+  </action>
+  <action name="actionSchedule">
+   <property name="text">
+    <string>Schedule </string>
    </property>
   </action>
  </widget>
